--- a/web/src/pages/AllGuitars.module.css
+++ b/web/src/pages/AllGuitars.module.css
@@ -1,8 +1,8 @@
-.tape-title {
+.guitar-title {
     margin-bottom: 8px;
 }
 
-.tape-actions {
+.guitar-actions {
     display: flex;
     gap: 8px;
 }
